Problema carga inicial, solved

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 				</div>
 			</section>
 			<div class="row text-white">
-				<div class="pt-2 px-3 bg-like texto-porcentaje text-right" :style="'width: '+p_like+'%'">
+				<div class="pt-2 px-3 bg-like texto-porcentaje text-right" :style="'width: '+p_likes+'%'">
 					<i class="fas fa-thumbs-up"></i>
-					<label v-text="p_like+'%'"></label>
+					<label v-text="p_likes+'%'"></label>
 				</div>
-				<div class="pt-2 px-3 bg-dislike texto-porcentaje" :style="'width: '+p_dislike+'%'">
-					<label v-text="p_dislike+'%'"></label>
+				<div class="pt-2 px-3 bg-dislike texto-porcentaje" :style="'width: '+p_dislikes+'%'">
+					<label v-text="p_dislikes+'%'"></label>
 					<i class="fas fa-thumbs-down"></i>
 				</div>
 			</div>
